# mogwai

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: master.yml  pr.yml  publish.yml  release.yml  rust.yml  tag.yml  test.yml
cookbook/: Cargo.toml  book.toml  build.rs
cookbook/src/: 2_new_project.md  3_component.md  SUMMARY.md  component.md  contravariant.md  counter.md  facades.md  intro.md  lib.rs  lists_of_components.md  logic_view_comms.md  nest_component.md  new_project.md  reflinks.md  routing.md  rsx.md  svg.md  view_capture.md
cookbook/tests/: skeptic.rs
crates/demo/: Cargo.toml  index.html
crates/demo/src/: button_clicks.rs  lib.rs  ssr.rs  tui.rs
crates/gremlin/: Cargo.toml  index.html
crates/gremlin/src/: builder.rs  channel.rs  dom.rs  event.rs  lib.rs  model.rs  patch.rs  sleep.rs  var.rs  view.rs
crates/gremlin/src/dom/: builder.rs
crates/js-framework-benchmark/: Cargo.toml
crates/js-framework-benchmark/src/: lib.rs
crates/mogwai/: Cargo.toml  webdriver.json
crates/mogwai-benches/: Cargo.toml  Trunk.toml  index.html
crates/mogwai-benches/src/: app.rs  benches.rs  lib.rs  store.rs
crates/mogwai-chan/: Cargo.toml
crates/mogwai-chan/src/: channel.rs  effect.rs  lib.rs  model.rs  patch.rs  txrx.rs
crates/mogwai-chan/src/channel/: target.rs
crates/mogwai-chan/src/txrx/: target.rs
crates/mogwai-core/: Cargo.toml
crates/mogwai-core/src/: builder.rs  channel.rs  component.rs  error.rs  event.rs  futures.rs  lib.rs  model.rs  patch.rs  relay.rs  target.rs  time.rs  traits.rs  view.rs
crates/mogwai-core/src/futures/: sink.rs  stream.rs
crates/mogwai-dom/: Cargo.toml
crates/mogwai-dom/src/: an_introduction.rs  builder.rs  event.rs  lib.rs  ssr.rs  utils.rs  view.rs
crates/mogwai-dom/src/view/: atomic.rs  dom.rs  js.rs  js_dom.rs  mod.rs  ssr.rs
crates/mogwai-dom/tests/: integration.rs  wasm.rs
crates/mogwai-futura/: Cargo.toml
crates/mogwai-futura/src/: builder.rs  lib.rs  macros.rs  proxy.rs  ssr.rs  str.rs  sync.rs  tuple.rs  view.rs  web.rs
crates/mogwai-futura/src/web/: event.rs
crates/mogwai-future-rsx/: Cargo.toml
crates/mogwai-future-rsx/src/: lib.rs  tokens.rs
crates/mogwai-html-macro/: Cargo.toml  README.md
crates/mogwai-html-macro/src/: html_relay.rs  lib.rs  relay.rs  tokens.rs
crates/mogwai-html-macro/tests/: integration_test.rs
crates/mogwai-hydrator/: Cargo.toml  README.md
crates/mogwai-hydrator/src/: lib.rs
crates/mogwai-hydrator/tests/: wasm.rs
crates/mogwai-js-framework-benchmark/: Cargo.toml  README.md  index.html
crates/mogwai-js-framework-benchmark/src/: app.rs  data.rs  lib.rs  row.rs
crates/mogwai-macros/: Cargo.toml  README.md
crates/mogwai-macros/src/: html_relay.rs  lib.rs  rsx.rs  tokens.rs
crates/mogwai-macros/tests/: integration_test.rs
crates/mogwai-view/: Cargo.toml
crates/mogwai-view/src/: lib.rs
crates/mogwai-wait/: Cargo.toml
crates/mogwai-wait/src/: event.rs  find.rs  lib.rs
crates/mogwai/src/: `  an_introduction.rs  builder.rs  channel.rs  component.rs  constraints.rs  either.rs  event.rs  future.rs  futures.rs  gizmo.rs  lib.rs  model.rs  patch.rs  prelude.rs  proxy.rs  relay.rs  sink.rs  spawn.rs  ssr.rs  str.rs  stream.rs  sync.rs  time.rs  txrx.rs  utils.rs  view.rs  web.rs
crates/mogwai/src/component/: subscriber.rs
crates/mogwai/src/futures/: sink.rs
crates/mogwai/src/view/: builder.rs  dom.rs
crates/mogwai/src/web/: event.rs
crates/mogwai/tests/: wasm.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: .#main.rs  main.rs
examples/counter/: Cargo.toml  index.html
examples/counter/src/: lib.rs
examples/focus-follower/: Cargo.toml  index.html
examples/focus-follower/src/: lib.rs
examples/list-of-gizmos/: Cargo.toml  index.html
examples/list-of-gizmos/scripts/: common.sh  test.sh
examples/list-of-gizmos/src/: lib.rs
examples/multipage/: Cargo.toml  LICENSE  README.md  index.html
examples/multipage/src/: api.rs  app.rs  lib.rs  main.rs
examples/multipage/src/components/: game.rs  mod.rs
examples/multipage/src/routes/: game_list.rs  mod.rs
examples/multipage/src/templates/: index.html
examples/nested-components/: Cargo.toml  Trunk.toml  index.html
examples/nested-components/src/: lib.rs
examples/sandbox/: Cargo.toml  index.html
examples/sandbox/src/: elm_button.rs  lib.rs  relay_button.rs
examples/spa-routing/: Cargo.toml  index.html
examples/spa-routing/src/: lib.rs
examples/ssr_component_hierarchy/: Cargo.toml  index.html
examples/ssr_component_hierarchy/src/: lib.rs
examples/svg/: .gitignore  Cargo.toml  index.html
examples/svg/src/: lib.rs
examples/tictactoe/: Cargo.toml  index.html
examples/tictactoe/src/: lib.rs  model.rs
examples/todomvc/: .#index.html  Cargo.toml  index.html  style.css
examples/todomvc/src/: app.rs  item.rs  lib.rs  store.rs  utils.rs
examples/todomvc/src/app/: item.rs
mogwai/: Cargo.toml
mogwai-design/: Cargo.toml
mogwai-design/src/: `  builder.rs  gizmo.rs  lib.rs  prelude.rs  txrx.rs  wire.rs
mogwai-sandbox/: Cargo.toml  index.html
mogwai-sandbox/src/: `  lib.rs
mogwai/src/: an_introduction.rs  builder.rs  component.rs  gizmo.rs  introduction.rs  lib.rs  model.rs  prelude.rs  request.rs  ssr.rs  timer.rs  txrx.rs  utils.rs  view.rs
mogwai/src/builder/: tags.rs
mogwai/src/component/: simple.rs  subscriber.rs
mogwai/src/gizmo/: dom.rs  html.rs  view.rs
mogwai/src/gizmo/dom/: hydration.rs
mogwai/src/view/: builder.rs  dom.rs  hydration.rs  interface.rs
mogwai/tests/: wasm.rs
scripts/: bootstrap.sh  build.sh  build_cookbook.sh  common.sh  release.sh  release_cookbook.sh  test.sh  test_cookbook.sh
