[workspace]

members = [
  #"cookbook",
  "crates/mogwai",
  "crates/mogwai-benches",
  "crates/mogwai-js-framework-benchmark",
  "crates/mogwai-macros",
  "examples/counter",
  "examples/nested-components",
  "examples/list-of-gizmos",
  "examples/spa-routing",
  "examples/svg",
  "examples/todomvc",
  "crates/xtask",
]

exclude = [
  "gentest",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
async-channel = "2.3.1"
console_error_panic_hook = { version = "0.1.6" }
console_log = "1.0"
env_logger = "0.11.8"
futures = "0.3"
futures-lite = "2.6.0"
log = "0.4.27"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[profile.release]
lto = true
opt-level = 'z'
