[package]
name = "cookbook"
version = "0.1.0"
authors = ["Schell <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc-comment = "^0.3"
mogwai = { path = "../crates/mogwai", version = "^0.6", features = ["dom"] }
smol = "^1.2"

[dependencies.web-sys]
version = "^0.3"
features = [
]

[dev-dependencies]
