[package]
name = "cookbook"
version = "0.1.0"
authors = ["Schell <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc-comment = "^0.3"
futures = "^0.3"
mogwai-dom = { path = "../crates/mogwai-dom", version = "^0.1.0" }

[dependencies.web-sys]
version = "^0.3"
features = []

[dev-dependencies]
