[package]
name = "mogwai-design"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shrev = "1.1.1"
specs = "0.15.1"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.31"
features = [
  "CssStyleDeclaration",
  "Document",
  "Element",
  "EventTarget",
  "HtmlElement",
  "Node",
  "Text",
  "Window"
]
