[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "mogwai-sandbox"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "0.1.2"
log = "0.4"
mogwai-design = { path = "../mogwai-design" }
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3.31"
features = ["CssStyleDeclaration", "Element", "Document", "HtmlElement", "Node", "Text", "Window"]