[package]
name = "mogwai"
version = "0.3.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The minimal, obvious, graphical, web application interface."
documentation = "https://docs.rs/mogwai/"
repository = "https://github.com/schell/mogwai"
readme = "../README.md"
keywords = ["ui", "dom", "app", "reactive", "frontend"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
js-sys = "0.3.44"
mogwai-html-macro = { path = "../crates/mogwai-html-macro", version = "^0.2" }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"

console_log = "^0.1"
log = "^0.4"

[dependencies.web-sys]
version = "^0.3"
features = [
  "CharacterData",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "MessageChannel",
  "MessagePort",
  "Node",
  "NodeList",
  "Performance",
  "Text",
  "Window"
]

[dev-dependencies]
doc-comment = "^0.3"
mogwai-hydrator = { path = "../crates/mogwai-hydrator", version = "^0.1" }
wasm-bindgen-test = "0.3.17"
wasm-bindgen-futures = "^0.4"

[dev-dependencies.web-sys]
version = "^0.3"
features = [
  "Request", "RequestMode", "RequestInit", "Response"
]
