[package]
name = "gremlin"
version = "0.0.0"
authors = ["Schell Carl Scivally <efsubenovex@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_log = "^0.1"
js-sys = "^0.3"
futures = "^0.3"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
async-channel = "^1.6"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "^0.3"
# Add more web-sys API's as you need them
features = [
  "Window",
  "Document",
  "Element",
  "Event",
  "HtmlInputElement",
  "HtmlElement",
  "CssStyleDeclaration",
  "EventTarget",
  "Performance",
  "Text",
  "Node",
  "NodeList",
]

[dev-dependencies]
wasm-bindgen-test = "^0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
