[package]
name = "mogwai-benches"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["keyed"]
keyed = ["mogwai-js-framework-benchmark/keyed"]

[dependencies]
anyhow = { version = "^1.0" }
console_error_panic_hook = { version = "0.1.6" }
console_log = "^0.1"
mogwai-js-framework-benchmark = { path = "../mogwai-js-framework-benchmark" }
log = "^0.4"
mogwai-dom = { version = "0.2.2", path = "../mogwai-dom" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"]}
wasm-bindgen = { version = "^0.2" }
wasm-bindgen-futures = "0.4.33"

[dependencies.web-sys]
version = "^0.3"
features = [
  "Element",
  "Document",
  "HtmlElement",
  "HtmlCollection",
  "HtmlBodyElement",
  "NodeList",
  "Storage"
]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
