[package]
name = "mogwai-benches"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
mogwai-js-framework-benchmark = { path = "../mogwai-js-framework-benchmark", default-features = false }
log.workspace = true
mogwai = { path = "../mogwai", version = "0.7" }
serde_json.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[dependencies.web-sys]
workspace = true
features = [
  "Element",
  "Document",
  "HtmlElement",
  "HtmlCollection",
  "HtmlBodyElement",
  "NodeList",
  "Storage"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
