[package]
name = "mogwai-chan"
version = "0.1.0"
authors = ["Schell Carl Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async-tokio = ["tokio"]

[dependencies]
tokio = { version = "1.5", optional = true, features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "^0.4"