[package]
name = "mogwai-chan"
version = "0.1.0"
authors = ["Schell Carl Scivally <efsubenovex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
async-tokio = ["tokio"]

[dependencies]
cfg-if = "^1.0"
futures = "^0.3"
lazy_static = "^1.4"
tokio = { version = "^1.5", optional = true, features = ["rt"] }

[dev-dependencies]
smol = { version = "^1.2" }