[package]
name = "mogwai-dom"
version = "0.2.4"
edition = "2021"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
license = "MIT"
description = "mogwai's DOM view implementation"
documentation = "https://docs.rs/mogwai-dom/"
repository = "https://github.com/schell/mogwai"
keywords = ["ui", "dom", "app", "reactive", "frontend"]
categories = ["gui", "wasm", "web-programming"]
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []

[dependencies]
anyhow = "^1.0"
async-channel = "1.8.0"
async-executor = "1.5.0"
async-lock = "2.6.0"
futures-lite = { version = "1.12.0", default-features = false }
lazy_static = "1.4.0"
log = "^0.4"
mogwai = { version = "0.6.6", path = "../mogwai" }
mogwai-macros = { version = "0.1.0", path = "../mogwai-macros", features = ["dom"] }
send_wrapper = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "^0.4"

# Transitive dep added because of this issue https://github.com/smol-rs/fastrand/issues/27
[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "^0.1", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "^0.3"
features = [
  "CharacterData",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "MessageChannel",
  "MessagePort",
  "Node",
  "NodeList",
  "Performance",
  "SvgElement",
  "Text",
  "Window"
]

[dev-dependencies]
doc-comment = "^0.3"
fast_log = "1.5.47"
futures = "^0.3"
console_log = "^0.1"
wasm-bindgen-test = "0.3.17"
wasm-bindgen-futures = "^0.4"

[dev-dependencies.web-sys]
version = "^0.3"
features = [
  "Request", "RequestMode", "RequestInit", "Response", "HtmlInputElement",
]
