[package]
name = "mogwai-futura"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "CharacterData",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "MessageChannel",
  "MessagePort",
  "Node",
  "NodeList",
  "Performance",
  "SvgElement",
  "Text",
  "Window"
]
