[package]
name = "mogwai-futura"
version = "0.1.0"
edition = "2024"

[features]
default = ["web", "ssr"]
web = ["dep:wasm-bindgen-futures", "dep:web-sys", "dep:mogwai-future-rsx"]
ssr = ["dep:async-channel"]
# tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
async-channel = { workspace = true, optional = true }
futures-core = "0.3.31"
futures-lite.workspace = true
log.workspace = true
mogwai-future-rsx = { version = "0.1.0", path = "../mogwai-future-rsx", optional = true }
serde.workspace = true
send_wrapper = "0.6"
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "CharacterData",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "MessageChannel",
  "MessagePort",
  "Node",
  "NodeList",
  "Performance",
  "SvgElement",
  "Text",
  "Window"
]
optional = true
