[package]
name = "mogwai-hydrator"
version = "0.3.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
description = "View hydration for the mogwai library"
license = "MIT"
repository = "https://github.com/schell/mogwai"
readme = "README.md"
keywords = ["ui", "dom", "hydration", "html"]
categories = ["gui", "wasm", "web-programming"]
documentation = "https://docs.rs/mogwai/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
futures = "^0.3"
mogwai-dom = { path = "../../crates/mogwai-dom", version = "^0.1" }
snafu = "^0.6"
wasm-bindgen = "^0.2"

[dependencies.web-sys]
version = "^0.3"
features = [
  "Element",
  "EventTarget",
  "HtmlElement",
  "Node",
  "Text",
]

[dev-dependencies]
console_log = "^0.1"
log = "^0.4"
wasm-bindgen-test = "0.3.17"
wasm-bindgen-futures = "^0.4"

[dev-dependencies.web-sys]
version = "^0.3"
features = [
  "Request", "RequestMode", "RequestInit", "Response"
]
