[package]
name = "mogwai-js-framework-benchmark"
description = "mogwai-dom implementation of js-framework-benchmark"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
keyed = []

[dependencies]
anyhow = "1.0.68"
console_error_panic_hook = { version = "0.1.6" }
console_log = "1.0"
getrandom = { version = "0.3.3" }
log = "0.4"
mogwai-futura = { path = "../mogwai-futura" }
rand = { version = "0.9", features = ["small_rng"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "^0.3"
features = [
  "Element",
  "Document",
  "HtmlElement",
  "HtmlCollection",
  "HtmlBodyElement",
  "NodeList",
  "Storage"
]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
