[package]
name = "mogwai-js-framework-benchmark"
description = "mogwai-dom implementation of js-framework-benchmark"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["entrypoint"]
entrypoint = []

[dependencies]
anyhow = "1.0.68"
async-channel.workspace = true
console_error_panic_hook.workspace = true
console_log.workspace = true
futures-lite.workspace = true
log.workspace = true
mogwai-futura = { path = "../mogwai-futura" }
rustc-hash = "2.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "^0.3"
features = [
  "Element",
  "Document",
  "DocumentFragment",
  "HtmlBodyElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTemplateElement",
  "NodeList",
  "Storage"
]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
