[package]
name = "mogwai-macros"
version = "0.3.1"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Declare mogwai views with RSX"
license = "MIT"
keywords = ["ui", "dom", "app", "reactive", "frontend"]
categories = ["gui", "wasm", "web-programming"]
documentation = "https://docs.rs/mogwai/"

[lib]
proc-macro = true

[features]
default = []
dom = []

[dependencies]
proc-macro2 = { version = "^1.0", features = ["span-locations"] }
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "extra-traits"] }
syn-rsx = "^0.7"

[dev-dependencies]
futures = "^0.3"
mogwai = { path = "../mogwai", features = ["dom"] }
smol = "^1.2"
smol-potat = "^1.1"
proc-macro2 = { version = "^1.0", features = ["span-locations"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "^0.3"
wasm-bindgen-futures = "^0.4"

[dev-dependencies.web-sys]
version = "0.3.31"
features = [
  "Request", "RequestMode", "RequestInit", "Response"
]
