[package]
name = "mogwai-macros"
version = "0.1.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Declarative RSX macro for constructing mogwai ViewBuilder"
license = "MIT"
keywords = ["ui", "dom", "reactive", "frontend", "gui"]
categories = ["gui", "wasm", "web-programming"]
documentation = "https://docs.rs/mogwai/"

[lib]
proc-macro = true

[features]
default = []
dom = []
pxy = []

[dependencies]
proc-macro2 = { version = "^1.0", features = ["span-locations"] }
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "extra-traits"] }
syn-rsx = "^0.7"

[dev-dependencies]
futures = "^0.3"
proc-macro2 = { version = "^1.0", features = ["span-locations"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "^0.3"
wasm-bindgen-futures = "^0.4"


[dev-dependencies.web-sys]
version = "0.3.31"
features = [
  "Request", "RequestMode", "RequestInit", "Response"
]
