[package]
name = "mogwai-macros"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "The minimal, obvious, graphical, widget application interface."
documentation = "https://docs.rs/mogwai/"
repository = "https://github.com/schell/mogwai"
readme = "../../README.md"
keywords = ["ui", "dom", "frontend"]
categories = ["gui", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0.49", features = ["full", "extra-traits", "parsing"] }

[dev-dependencies]
mogwai = { path = "../mogwai" }
