[package]
name = "mogwai"
version = "0.6.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The minimal, obvious, graphical, widget application interface."
documentation = "https://docs.rs/mogwai/"
repository = "https://github.com/schell/mogwai"
readme = "../../README.md"
keywords = ["ui", "dom", "app", "reactive", "frontend"]
categories = ["gui", "asynchronous", "widgets"]

[features]
default = ["dom"]
dom-wasm = ["mogwai-dom", "mogwai-macros/dom"]
dom = ["mogwai-dom/send_sync", "mogwai-core/sync", "mogwai-core/send", "mogwai-macros/dom"]
send = ["mogwai-core/send"]
sync = ["mogwai-core/sync"]

[dependencies]
mogwai-core = { version = "^0.1", path = "../mogwai-core", default-features = false }
mogwai-dom = { version = "^0.1", path = "../mogwai-dom", default-features = false, optional = true }
mogwai-macros = { path = "../mogwai-macros", version = "^0.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
doc-comment = "^0.3"
smol = "^1.2"

[dev-dependencies.web-sys]
version = "^0.3"
features = ["HtmlElement"]
