[package]
name = "mogwai"
version = "0.6.3"
edition = "2021"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
license = "MIT"
description = "The minimal, obvious, graphical, widget application interface."
documentation = "https://docs.rs/mogwai/"
repository = "https://github.com/schell/mogwai"
readme = "../../README.md"
keywords = ["ui", "dom", "app", "reactive", "frontend"]
categories = ["gui", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
anyhow = "^1.0"
async-broadcast = "^0.4"
async-channel = "1.8.0"
async-lock = "^2.4"
console_log = "^0.1"
futures-lite = { version = "1.12.0", default-features = false }
lazy_static = "^1.4"
log = "^0.4"
mogwai-macros = { path = "../mogwai-macros", version = "0.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "^0.3"
features = ["Document", "MessageChannel", "MessagePort", "Performance", "Window"]

[dev-dependencies.web-sys]
version = "^0.3"
features = ["Event"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3"
