[package]
name = "mogwai"
version = "0.7.0"
edition = "2024"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
license = "MIT"
description = "The minimal, obvious, graphical, widget application interface."
documentation = "https://docs.rs/mogwai/"
repository = "https://github.com/schell/mogwai"
readme = "../../README.md"
keywords = ["ui", "dom", "frontend"]
categories = ["gui", "asynchronous"]

[features]
default = ["web", "ssr"]
web = ["dep:wasm-bindgen-futures", "dep:web-sys"]
ssr = ["dep:async-channel"]
# tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
async-channel = { workspace = true, optional = true }
futures-core = "0.3.31"
futures-lite.workspace = true
log.workspace = true
mogwai-macros = { version = "0.2.0", path = "../mogwai-macros" }
serde.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "CharacterData",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "HtmlInputElement",
  "MessageChannel",
  "MessagePort",
  "Node",
  "NodeList",
  "Performance",
  "SvgElement",
  "Text",
  "Window"
]
optional = true
